# Mysh

./: CMakeLists.txt  Makefile  README.md
include/: executor.h  expand.h  lexer.h  mysh.h  parser.h
src/: main.c
src/executor/: exec.c
src/expand/: expand.c
src/init/: config.c
src/jobs/: jobs.c
src/lexer/: lexer.c
src/parser/: parser.c
